--- a/views/purchase_view.xml
+++ b/views/purchase_view.xml
@@ -8,6 +8,9 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
+                        <h1>
+                            <field name="ref"/>
+                        </h1>
                         <group>
                             <field name="material_id"/>
                             <field name="quantity"/>
