--- a/views/evaluation_view.xml
+++ b/views/evaluation_view.xml
@@ -6,6 +6,7 @@
         <field name="model">evaluation</field>
         <field name="arch" type="xml">
             <tree>
+                <field name="ref"/>
                 <field name="name"/>
                 <field name="id_tugas"/>
                 <field name="penilaian_kinerja"/>
@@ -22,6 +23,9 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <h1>
+                        <field name="ref"/>
+                    </h1>
                     <group>
                         <group>
                             <field name="name"/>
