--- a/views/expenditure_view.xml
+++ b/views/expenditure_view.xml
@@ -24,6 +24,9 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
+                        <h1>
+                            <field name="ref"/>
+                        </h1>
                         <group>
                             <group>
                                 <field name="name"/>
