--- a/views/permit_view.xml
+++ b/views/permit_view.xml
@@ -27,6 +27,9 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
+                        <h1>
+                            <field name="ref"/>
+                        </h1>
                         <group>
                             <field name="name" readonly="1"/>
                             <field name="project_id"/>
