--- a/views/progresnote_view.xml
+++ b/views/progresnote_view.xml
@@ -25,6 +25,9 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
+                        <h1>
+                            <field name="ref"></field>
+                        </h1>
                         <group>
                             <group>
                                 <field name="name"/>
