--- a/wizard/purchase_report_wizard.xml
+++ b/wizard/purchase_report_wizard.xml
@@ -1,6 +1,6 @@
 <odoo>
     <!-- doodex.reportpenjualanwz form view -->
-    <record id="doodex_purchasereportwz_view_form" model="ir.ui.view">
+    <record id="construction_reportwz_view_form" model="ir.ui.view">
         <field name="name">Purchase Report Wizard</field>
         <field name="model">construction.purchasereportwz</field>
         <field name="arch" type="xml">
@@ -21,16 +21,16 @@
         </field>
     </record>
     <!-- doodex.reportpenjualanwz action window -->
-    <record id="doodex_purchasereportwz_action" model="ir.actions.act_window">
+    <record id="construction_reportwz_action" model="ir.actions.act_window">
         <field name="name">Purchase Report</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">construction.purchasereportwz</field>
         <field name="view_mode">form</field>
-        <field name="view_id" ref="doodex_purchasereportwz_view_form"/>
+        <field name="view_id" ref="construction_reportwz_view_form"/>
         <field name="target">new</field>
     </record>
 
     <!-- This Menu Item must have a parent and an action -->
-    <menuitem id="minimartdoodex_reportpenjualanwz_menu_act" name="Purchase Report" parent="menu_resource_root" action="doodex_purchasereportwz_action" sequence="15"/>
+    <menuitem id="construction_reportwz" name="Purchase Report" parent="menu_resource_root" action="construction_reportwz_action" sequence="15"/>
 
 </odoo>
