--- a/views/budget_view.xml
+++ b/views/budget_view.xml
@@ -7,6 +7,7 @@
             <field name="model">construction.budget</field>
             <field name="arch" type="xml">
                 <tree>
+                    <field name="ref"/>
                     <field name="name"></field>
                     <field name="id_proyek"/>
                     <field name="kategori_anggaran"/>
