--- a/views/worker_view.xml
+++ b/views/worker_view.xml
@@ -7,6 +7,7 @@
             <field name="model">construction.worker</field>
             <field name="arch" type="xml">
                 <tree>
+                    <field name="ref"/>
                     <field name="name"/>
                     <field name="position"/>
                     <field name="salary"/>
