add inherit mail

--- a/views/materials_view.xml
+++ b/views/materials_view.xml
@@ -40,6 +40,7 @@
                     <group>
                         <field name="purchase_ids" widget="one2many_list">
                             <tree>
+                                <field name="purchase_date"/>
                                 <field name="name"/>
                                 <field name="price"/>
                                 <field name="quantity"/>
