--- a/views/project_view.xml
+++ b/views/project_view.xml
@@ -30,9 +30,9 @@
                         <button string="Cancel" type="object" class="btn btn-danger" icon="fa-ban" name="action_cancel" attrs="{'invisible': [('status_proyek', '=', 'cancel')]}"/>
                         <button string="Draft" type="object" class="btn btn-warning" icon="fa-file-o" name="action_draft" attrs="{'invisible': [('status_proyek', '!=', 'ongoing'), ('status_proyek', '!=', 'cancel')]}" />
                         <button name="%(construction.report_project_pdf)d" type="action" icon="fa-print" string="PRINT" class="btn btn-primary"/>
+                        <field name="status_proyek" widget="statusbar" options="{'statusbar_visible': True}" statusbar_visible="draft,ongoing,completed,cancel"/>
                     </header>
                     <sheet>
-                        <field name="status_proyek" widget="statusbar" options="{'statusbar_visible': True}" statusbar_visible="draft,ongoing,completed,cancel"/>
                         <h1>
                             <field name="ref"></field>
                         </h1>
@@ -176,6 +176,11 @@
                             </page>
                         </notebook>
                     </sheet>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="activity_ids" widget="mail_activity"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                    </div>
                 </form>
             </field>
         </record>
